Deepsec main latest (#41)
* Fix JWT audience validation

* Upgrade MCP SDK for modern client capabilities